liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
typedef unsigned int UINT32;
/**
 * @ingroup los_list
 * Structure of a node in a doubly linked list.
 */
typedef struct LOS_DL_LIST {
  /**
   *< Current node's pointer to the previous node
   */
  struct LOS_DL_LIST *pstPrev;
  /**
   *< Current node's pointer to the next node
   */
  struct LOS_DL_LIST *pstNext;
} LOS_DL_LIST;
typedef unsigned int BOOL;
typedef struct LosLmkOpsNode {
  /**
   *< The priority in the LMK list, the higher priority with a smaller number.
   */
  UINT32 priority;
  /**
   *< Release the memory of tasks in the LMK list. Return LOS_OK for a successful release.
   */
  UINT32 (*freeMem)(void);
  /**
   *< Restore the tasks killed by freeMem(). Return LOS_OK for a successful restore.
   */
  UINT32 (*restoreTask)(void);
  /**
   *< LosLmkOpsNode node.
   */
  struct LOS_DL_LIST node;
} LosLmkOpsNode;
/**
 * @ingroup los_lmk
 * @brief Register a low memory killer node.
 *
 * @par Description:
 * This API is used to register a low memory killer node. A LosLmkOpsNode node
 * can be registered only once.
 *
 * @attention None.
 *
 * @param  lmkNode [IN] The LosLmkOpsNode node to be registered.
 *
 * @retval LOS_OK The LosLmkOpsNode node is registered successfully.
 * @retval LOS_ERRNO_LMK_INVALID_PARAMETER  The parameter is invalid.
 * @retval LOS_ERRNO_LMK_ALREADY_REGISTERED The LosLmkOpsNode node already registered.
 * @par Dependency:
 * <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern UINT32 LOS_LmkOpsNodeRegister(struct LosLmkOpsNode *lmkNode);
/**
 * @ingroup los_lmk
 * @brief Unregister a low memory killer node.
 *
 * @par Description:
 * This API is used to unregister a low memory killer node.
 *
 * @attention None.
 *
 * @param  lmkNode [IN] The LosLmkOpsNode node to be registered.
 *
 * @retval LOS_OK The LosLmkOpsNode node is unregistered successfully.
 * @retval LOS_ERRNO_LMK_NOT_REGISTERED The LosLmkOpsNode node is not yet registered.
 * @par Dependency:
 * <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern UINT32 LOS_LmkOpsNodeUnregister(struct LosLmkOpsNode *lmkNode);
/**
 * @ingroup los_lmk
 * @brief Initialize low memory killer framework.
 *
 * @par Description:
 * This API is used to initialize the low memory killer framework.
 *
 * @attention None.
 *
 * @param  None.
 *
 * @retval None.
 * @par Dependency:
 * <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern void OsLmkInit(void);
/**
 * @ingroup los_lmk
 * @brief Restore the tasks killed by the task which triggers low memory killer.
 *
 * @par Description:
 * This API is used to restore the tasks killed by the task which triggers low memory killer.
 * This function will be invoked by the developer as needed.
 *
 * @attention None.
 *
 * @param  None.
 *
 * @retval LOS_OK  All the restore killed tasks functions are invoked successfully.
 * @retval LOS_ERRNO_LMK_RESTORE_NOT_NEEDED No need to restore since no tasks killed to free memory.
 * @retval LOS_ERRNO_LMK_RESTORE_TASKS_FAILURE Failed to restore the killed tasks by invoking the registered functions.
 * @par Dependency:
 * <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern UINT32 LOS_LmkTasksRestore(void);
/**
 * @ingroup los_lmk
 * @brief Kill the tasks to release the used memory.
 *
 * @par Description:
 *  This API is used to kill the tasks to release the used memory when low memory killer is triggered.
 *
 * @attention None.
 *
 * @param  None.
 *
 * @retval LOS_OK All the free memory functions are invoked successfully.
 * @retval LOS_ERRNO_LMK_MEMORY_ALREADY_FREED The registered free memory functions have been invoked.
 * @retval LOS_ERRNO_LMK_FREE_MEMORY_FAILURE Failed to free memory by invoking the registered functions.
 * @par Dependency:
 * <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern UINT32 LOS_LmkTasksKill(void);