liteOS-M/rust_kernel/kernel/rust_code/include/los_lmk_h.rs

#[test]
fn bindgen_test_layout_LosLmkOpsNode() {
    assert_eq!(
        ::std::mem::size_of::<LosLmkOpsNode>(),
        40usize,
        concat!("Size of: ", stringify!(LosLmkOpsNode))
    );
    assert_eq!(
        ::std::mem::align_of::<LosLmkOpsNode>(),
        8usize,
        concat!("Alignment of ", stringify!(LosLmkOpsNode))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LosLmkOpsNode>())).priority as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LosLmkOpsNode),
            "::",
            stringify!(priority)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LosLmkOpsNode>())).freeMem as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(LosLmkOpsNode),
            "::",
            stringify!(freeMem)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LosLmkOpsNode>())).restoreTask as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(LosLmkOpsNode),
            "::",
            stringify!(restoreTask)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LosLmkOpsNode>())).node as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(LosLmkOpsNode),
            "::",
            stringify!(node)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LosLmkOps {
    #[doc = "< The registered LosLmkOpsNode will be inserted in this list."]
    pub lmkOpsList: LOS_DL_LIST,
    #[doc = "< Flag that if LOS_LmkTasksKill has been invoked."]
    pub isMemFreed: BOOL,
}
#[test]
fn bindgen_test_layout_LosLmkOps() {
    assert_eq!(
        ::std::mem::size_of::<LosLmkOps>(),
        24usize,
        concat!("Size of: ", stringify!(LosLmkOps))
    );
    assert_eq!(
        ::std::mem::align_of::<LosLmkOps>(),
        8usize,
        concat!("Alignment of ", stringify!(LosLmkOps))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LosLmkOps>())).lmkOpsList as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LosLmkOps),
            "::",
            stringify!(lmkOpsList)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LosLmkOps>())).isMemFreed as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(LosLmkOps),
            "::",
            stringify!(isMemFreed)
        )
    );
}
extern "C" {
    #[doc = " @ingroup los_lmk"]
    #[doc = " @brief Register a low memory killer node."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to register a low memory killer node. A LosLmkOpsNode node"]
    #[doc = " can be registered only once."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  lmkNode [IN] The LosLmkOpsNode node to be registered."]
    #[doc = ""]
    #[doc = " @retval LOS_OK The LosLmkOpsNode node is registered successfully."]
    #[doc = " @retval LOS_ERRNO_LMK_INVALID_PARAMETER  The parameter is invalid."]
    #[doc = " @retval LOS_ERRNO_LMK_ALREADY_REGISTERED The LosLmkOpsNode node already registered."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_LmkOpsNodeRegister(lmkNode: *mut LosLmkOpsNode) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_lmk"]
    #[doc = " @brief Unregister a low memory killer node."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to unregister a low memory killer node."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  lmkNode [IN] The LosLmkOpsNode node to be registered."]
    #[doc = ""]
    #[doc = " @retval LOS_OK The LosLmkOpsNode node is unregistered successfully."]
    #[doc = " @retval LOS_ERRNO_LMK_NOT_REGISTERED The LosLmkOpsNode node is not yet registered."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_LmkOpsNodeUnregister(lmkNode: *mut LosLmkOpsNode) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_lmk"]
    #[doc = " @brief Initialize low memory killer framework."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to initialize the low memory killer framework."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval None."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn OsLmkInit();
}
extern "C" {
    #[doc = " @ingroup los_lmk"]
    #[doc = " @brief Restore the tasks killed by the task which triggers low memory killer."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to restore the tasks killed by the task which triggers low memory killer."]
    #[doc = " This function will be invoked by the developer as needed."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval LOS_OK  All the restore killed tasks functions are invoked successfully."]
    #[doc = " @retval LOS_ERRNO_LMK_RESTORE_NOT_NEEDED No need to restore since no tasks killed to free memory."]
    #[doc = " @retval LOS_ERRNO_LMK_RESTORE_TASKS_FAILURE Failed to restore the killed tasks by invoking the registered functions."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_LmkTasksRestore() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_lmk"]
    #[doc = " @brief Kill the tasks to release the used memory."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = "  This API is used to kill the tasks to release the used memory when low memory killer is triggered."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval LOS_OK All the free memory functions are invoked successfully."]
    #[doc = " @retval LOS_ERRNO_LMK_MEMORY_ALREADY_FREED The registered free memory functions have been invoked."]
    #[doc = " @retval LOS_ERRNO_LMK_FREE_MEMORY_FAILURE Failed to free memory by invoking the registered functions."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_lmk.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_LmkTasksKill() -> UINT32;
}
